Fixed issue with blog overlapping other sections

--- a/components/blog-overview.scss
+++ b/components/blog-overview.scss
@@ -46,7 +46,7 @@ justify-content: flex-start;
 
   .blog-card-container {
     width: 400px;
-    height: 400px;
+    height: 1800px;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
@@ -61,7 +61,6 @@ justify-content: flex-start;
 
   .blog-card-container {
     width: 300px;
-    height: 100%;
   }
 
   .blog-card {
